Fix styles version mobile posts

--- a/src/components/Cover/Cover.module.css
+++ b/src/components/Cover/Cover.module.css
@@ -25,6 +25,8 @@
 @media screen and (max-width: 768px) {
   .Cover {
     padding: 0 0 35px;
+    margin-top: 70px;
+    border-radius: 0;
   }
 
   .inner {
