--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -84,6 +84,7 @@
 
 @media screen and (max-width: 768px) {
   .Newsletter {
+    margin: 20px auto 30px;
     width: 85%;
   }
 
