--- a/src/components/PostTitle/PostTitle.module.css
+++ b/src/components/PostTitle/PostTitle.module.css
@@ -1,25 +1,28 @@
 .title {
-  font-size: 3.75rem;            
-  line-height: 3.5rem;
+  font-size: 3.7rem;
+  line-height: 4rem;
   font-weight: 700;
   margin: 20px 0;
   text-shadow: -1px 1px 2px #1c1c1c;
   text-align: center;
   color: #ffffff;
 }
+
 .title_flex {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .capitalize {
   text-transform: capitalize;
 }
+
 @media screen and (max-width: 768px) {
   .title {
     font-size: 3rem;
-    line-height: 3.2rem;
+    line-height: 3.3rem;
     width: 100%;
   }
-}  
+}
