--- a/src/components/PostsFeature/PostsFeature.module.css
+++ b/src/components/PostsFeature/PostsFeature.module.css
@@ -125,7 +125,7 @@
 @media screen and (max-width: 768px) {
   .PostsFeature {
     grid-template-columns: minmax(300px, 1fr);
-    margin: 50px 0 20px;
+    margin: 30px 0 20px;
   }
 
   .PostsFeature .picture {
